Fix simulator output path

--- a/benchmarks/simulations/sim_dev.ipynb
+++ b/benchmarks/simulations/sim_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,10 +235,11 @@
     "    def run_algorithm(self, prefix: str) -> None:\n",
     "        nodes_path = prefix + \"_nodes.csv\"\n",
     "        relations_path = prefix + \"_relations.csv\"\n",
-    "        outputs_dir = \"test_simulator_automated_temp/\"\n",
+    "        outputs_dir = \"simulator_temp/\"\n",
     "        pedigree_ensemble = PedigreeEnsemble(relations_path, \n",
     "                                             nodes_path, \n",
     "                                             outputs_dir,\n",
+    "                                             sample_count=100,\n",
     "                                             random_seed=self._random_seed)\n",
     "        self._algorithm_pedigree = pedigree_ensemble.find_best_pedigree()\n",
     "        self._final_strike_count = pedigree_ensemble._final_strike_count\n",
@@ -344,26 +345,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ground truth pedigree size: 88 nodes\n"
+      "Ground truth pedigree size: 37 nodes\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'PedigreeEnsemble' object has no attribute 'find_best_relation_set'",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing relation {N7, N9, 2}: 100%|██████████ | 80/80 [00:24<00:00]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final strike count: 31\n",
+      "Pairwise Accuracy: 0.803\n",
+      "Relation Precision: 0.446\n",
+      "Relation Recall: 0.296\n",
+      "Relation F1: 0.356\n",
+      "Degree Precision: 0.8\n",
+      "Degree Recall: 0.531\n",
+      "Degree F1: 0.638\n",
+      "\n",
+      "Ground truth pedigree size: 41 nodes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing relation {N39, N6, 2}: 100%|██████████ | 63/63 [00:17<00:00] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final strike count: 8\n",
+      "Pairwise Accuracy: 0.923\n",
+      "Relation Precision: 0.776\n",
+      "Relation Recall: 0.703\n",
+      "Relation F1: 0.738\n",
+      "Degree Precision: 0.955\n",
+      "Degree Recall: 0.865\n",
+      "Degree F1: 0.908\n",
+      "\n",
+      "Ground truth pedigree size: 43 nodes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing relation {N42, N9, 2}: 100%|██████████ | 110/110 [00:33<00:00]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final strike count: 14\n",
+      "Pairwise Accuracy: 0.953\n",
+      "Relation Precision: 0.957\n",
+      "Relation Recall: 0.833\n",
+      "Relation F1: 0.891\n",
+      "Degree Precision: 0.965\n",
+      "Degree Recall: 0.841\n",
+      "Degree F1: 0.899\n",
+      "\n",
+      "Ground truth pedigree size: 11 nodes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing relation {N10, N6, 2}: 100%|██████████ | 4/4 [00:00<00:00]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final strike count: 0\n",
+      "Pairwise Accuracy: 0.933\n",
+      "Relation Precision: 0.75\n",
+      "Relation Recall: 0.75\n",
+      "Relation F1: 0.75\n",
+      "Degree Precision: 1.0\n",
+      "Degree Recall: 1.0\n",
+      "Degree F1: 1.0\n",
+      "\n",
+      "Ground truth pedigree size: 53 nodes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing relation {N10, N19, 1}:   4%|▎          | 3/82 [00:00<00:10]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGround truth pedigree size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(test\u001b[38;5;241m.\u001b[39m_ground_truth_pedigree\u001b[38;5;241m.\u001b[39mnode_to_data)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m nodes\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m test\u001b[38;5;241m.\u001b[39mmask_and_write_data(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[43mtest\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_algorithm\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtest\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFinal strike count: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest\u001b[38;5;241m.\u001b[39m_final_strike_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m metrics \u001b[38;5;241m=\u001b[39m test\u001b[38;5;241m.\u001b[39mget_metrics()\n",
-      "Cell \u001b[0;32mIn[2], line 221\u001b[0m, in \u001b[0;36mSimulatedPedigree.run_algorithm\u001b[0;34m(self, prefix)\u001b[0m\n\u001b[1;32m    216\u001b[0m outputs_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest_simulator_automated_temp/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    217\u001b[0m pedigree_ensemble \u001b[38;5;241m=\u001b[39m PedigreeEnsemble(relations_path, \n\u001b[1;32m    218\u001b[0m                                      nodes_path, \n\u001b[1;32m    219\u001b[0m                                      outputs_dir,\n\u001b[1;32m    220\u001b[0m                                      random_seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_random_seed)\n\u001b[0;32m--> 221\u001b[0m \u001b[43mpedigree_ensemble\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_best_relation_set\u001b[49m()\n\u001b[1;32m    222\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_algorithm_pedigree \u001b[38;5;241m=\u001b[39m pedigree_ensemble\u001b[38;5;241m.\u001b[39mfinal_fuzzy_pedigree\n\u001b[1;32m    223\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_final_strike_count \u001b[38;5;241m=\u001b[39m pedigree_ensemble\u001b[38;5;241m.\u001b[39m_final_strike_count\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'PedigreeEnsemble' object has no attribute 'find_best_relation_set'"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGround truth pedigree size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(test\u001b[38;5;241m.\u001b[39m_ground_truth_pedigree\u001b[38;5;241m.\u001b[39mnode_to_data)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m nodes\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m test\u001b[38;5;241m.\u001b[39mmask_and_write_data(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[43mtest\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_algorithm\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtest\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFinal strike count: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest\u001b[38;5;241m.\u001b[39m_final_strike_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m metrics \u001b[38;5;241m=\u001b[39m test\u001b[38;5;241m.\u001b[39mget_metrics()\n",
+      "Cell \u001b[0;32mIn[8], line 222\u001b[0m, in \u001b[0;36mSimulatedPedigree.run_algorithm\u001b[0;34m(self, prefix)\u001b[0m\n\u001b[1;32m    216\u001b[0m outputs_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msimulator_temp/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    217\u001b[0m pedigree_ensemble \u001b[38;5;241m=\u001b[39m PedigreeEnsemble(relations_path, \n\u001b[1;32m    218\u001b[0m                                      nodes_path, \n\u001b[1;32m    219\u001b[0m                                      outputs_dir,\n\u001b[1;32m    220\u001b[0m                                      sample_count\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m,\n\u001b[1;32m    221\u001b[0m                                      random_seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_random_seed)\n\u001b[0;32m--> 222\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_algorithm_pedigree \u001b[38;5;241m=\u001b[39m \u001b[43mpedigree_ensemble\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_best_pedigree\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    223\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_final_strike_count \u001b[38;5;241m=\u001b[39m pedigree_ensemble\u001b[38;5;241m.\u001b[39m_final_strike_count\n",
+      "File \u001b[0;32m~/pedigree_package/src/pedigree_package/pedigree_ensemble.py:158\u001b[0m, in \u001b[0;36mPedigreeEnsemble.find_best_pedigree\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    156\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnode1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnode2\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdegree\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    157\u001b[0m progress_bar\u001b[38;5;241m.\u001b[39mset_description(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProcessing relation \u001b[39m\u001b[38;5;130;01m{{\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mnode1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnode2\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdegree\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m}}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 158\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_add_relation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnode1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdegree\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdegree\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    159\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_clean_relation_dicts()\n\u001b[1;32m    161\u001b[0m relations_so_far \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_all_relations\u001b[38;5;241m.\u001b[39miloc[:idx\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "File \u001b[0;32m~/pedigree_package/src/pedigree_package/pedigree_ensemble.py:183\u001b[0m, in \u001b[0;36mPedigreeEnsemble._add_relation\u001b[0;34m(self, node1, node2, degree)\u001b[0m\n\u001b[1;32m    181\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m degree \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    182\u001b[0m     new_pedigrees\u001b[38;5;241m.\u001b[39mextend(PedigreeEnsemble\u001b[38;5;241m.\u001b[39m_connect_first_degree_relation(pedigree, node1, node2, constraints\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_DEFAULT_CONSTRAINTS[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[0;32m--> 183\u001b[0m     new_pedigrees\u001b[38;5;241m.\u001b[39mextend(\u001b[43mPedigreeEnsemble\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_connect_second_degree_relation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpedigree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstraints\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_DEFAULT_CONSTRAINTS\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    184\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m degree \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    185\u001b[0m     new_pedigrees\u001b[38;5;241m.\u001b[39mappend(pedigree)  \u001b[38;5;66;03m# No relation (i.e. false positive)\u001b[39;00m\n",
+      "File \u001b[0;32m~/pedigree_package/src/pedigree_package/pedigree_ensemble.py:229\u001b[0m, in \u001b[0;36mPedigreeEnsemble._connect_second_degree_relation\u001b[0;34m(pedigree, node1, node2, constraints)\u001b[0m\n\u001b[1;32m    227\u001b[0m         new_pedigrees\u001b[38;5;241m.\u001b[39mextend(PedigreeEnsemble\u001b[38;5;241m.\u001b[39m_connect_grandparent_relation(pedigree, node2, node1))\n\u001b[1;32m    228\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m relation \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhalf-siblings\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 229\u001b[0m         new_pedigrees\u001b[38;5;241m.\u001b[39mextend(\u001b[43mPedigreeEnsemble\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_connect_half_sibling_relation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpedigree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode2\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    230\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m new_pedigrees\n",
+      "File \u001b[0;32m~/pedigree_package/src/pedigree_package/pedigree_ensemble.py:363\u001b[0m, in \u001b[0;36mPedigreeEnsemble._connect_half_sibling_relation\u001b[0;34m(pedigree, node1, node2, shared_relative_sex)\u001b[0m\n\u001b[1;32m    361\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node2_parent \u001b[38;5;129;01min\u001b[39;00m node2_parents:\n\u001b[1;32m    362\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m node2_parent \u001b[38;5;241m!=\u001b[39m node1:\n\u001b[0;32m--> 363\u001b[0m         ret\u001b[38;5;241m.\u001b[39mextend(\u001b[43mPedigreeEnsemble\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_connect_parent_relation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_pedigree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode2_parent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnode1\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    364\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ret\n",
+      "File \u001b[0;32m~/pedigree_package/src/pedigree_package/pedigree_ensemble.py:241\u001b[0m, in \u001b[0;36mPedigreeEnsemble._connect_parent_relation\u001b[0;34m(pedigree, node1, node2)\u001b[0m\n\u001b[1;32m    238\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m node1 \u001b[38;5;129;01min\u001b[39;00m pedigree\u001b[38;5;241m.\u001b[39mnode_to_data \u001b[38;5;129;01mand\u001b[39;00m node2 \u001b[38;5;129;01min\u001b[39;00m pedigree\u001b[38;5;241m.\u001b[39mnode_to_data\n\u001b[1;32m    240\u001b[0m ret: \u001b[38;5;28mlist\u001b[39m[Pedigree] \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m--> 241\u001b[0m new_pedigree \u001b[38;5;241m=\u001b[39m \u001b[43mcopy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeepcopy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpedigree\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    242\u001b[0m new_pedigree\u001b[38;5;241m.\u001b[39mfill_node_parents(node2)\n\u001b[1;32m    243\u001b[0m original_parent: \u001b[38;5;28mstr\u001b[39m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/miniconda/base/envs/trees/lib/python3.13/copy.py:144\u001b[0m, in \u001b[0;36mdeepcopy\u001b[0;34m(x, memo, _nil)\u001b[0m\n\u001b[1;32m    142\u001b[0m copier \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(x, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__deepcopy__\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m    143\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m copier \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 144\u001b[0m     y \u001b[38;5;241m=\u001b[39m \u001b[43mcopier\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmemo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    145\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    146\u001b[0m     reductor \u001b[38;5;241m=\u001b[39m dispatch_table\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;28mcls\u001b[39m)\n",
+      "File \u001b[0;32m~/pedigree_package/src/pedigree_package/pedigree.py:30\u001b[0m, in \u001b[0;36mPedigree.__deepcopy__\u001b[0;34m(self, memo)\u001b[0m\n\u001b[1;32m     28\u001b[0m new_pedigree\u001b[38;5;241m.\u001b[39mnode_to_data \u001b[38;5;241m=\u001b[39m defaultdict(\u001b[38;5;28;01mlambda\u001b[39;00m: defaultdict(\u001b[38;5;28mstr\u001b[39m))\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnode_to_data\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m---> 30\u001b[0m     new_pedigree\u001b[38;5;241m.\u001b[39mnode_to_data[k] \u001b[38;5;241m=\u001b[39m \u001b[43mv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m new_pedigree\u001b[38;5;241m.\u001b[39mnode_to_father \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnode_to_father\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m     33\u001b[0m new_pedigree\u001b[38;5;241m.\u001b[39mnode_to_mother \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnode_to_mother\u001b[38;5;241m.\u001b[39mcopy()\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
