--- a/benchmarks/published/data/rivollat/citation.bib
+++ b/benchmarks/published/data/rivollat/citation.bib
@@ -17,3 +17,18 @@
   doi = {10.1038/s41586-023-06350-8},
   issn = {1476-4687}
 }
+
+@article{Alaçamlı2024,
+  author = {Alaçamlı, Erkin and Naidoo, Thijessen and Güler, Merve N.
+    and Sağlıcan, Ekin and Aktürk, Şevval and Mapelli, Igor and Vural,
+    Kıvılcım Başak and Somel, Mehmet and Malmström, Helena and Günther,
+    Torsten},
+  title = {READv2: Advanced and User-Friendly Detection of Biological
+    Relatedness in Archaeogenomics},
+  journal = {Genome Biology},
+  volume = {25},
+  number = {1},
+  pages = {216},
+  year = {2024},
+  url = {https://doi.org/10.1186/s13059-024-03350-3}
+}
